res/examples/invalid/call_noncallable_tuple_using_variable.eg
let t = (1, false, [1, 2, 3],);

t();

// out: TypeError: tuple<number, bool, list<number>> is not callable